test/io/fsouza/chown/permission_error.good
permission_error.chpl:1: error: Operation not permitted in chown with path "file.txt"
